# rclonegui

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  rclone-setup.ps1  rclone-setup.sh  vite.config.ts  yapilan.md
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: release.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-1-review.diff  task-10to17-brief.md  task-18-brief.md  task-2-brief.md  task-2-report.md  task-2-review.diff  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-5-report.md  task-6-brief.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-brief.md  task-8-report.md  (+2 more)
Belge/: Prompt.md
openspec/: config.yaml
sast/: architecture.md  fileupload-results.md  final-report.md  hardcodedsecrets-results.md  idor-results.md  missingauth-results.md  pathtraversal-results.md  rce-results.md  sqli-results.md  ssrf-results.md  ssti-results.md  xss-results.md
src/: App.css  App.tsx  ConfigPanel.tsx  MountPanel.tsx  TransferPanel.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: mod.rs  rclone_cmds.rs  task_cmds.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  task_repo.rs
src-tauri/src/rclone/: config.rs  discovery.rs  events.rs  mod.rs  process.rs  slug.rs
src-tauri/src/scheduler/: cron.rs  engine.rs  mod.rs  scheduler.rs
(+34 files in other folders)
