[package]
name = "rclonegui"
version = "0.1.0"
description = "A Tauri App"
authors = ["Beyhan Oğur"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rclonegui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
regex = "1.13.0"
uuid = { version = "1.23.5", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
cron = "0.15"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

